[gd_scene load_steps=25 format=3 uid="uid://3ah88dbq7yi4"]

[ext_resource type="Script" uid="uid://dbcs0mgpcg3be" path="res://Scripts/ZEPlayer.gd" id="1_wtpaa"]
[ext_resource type="Texture2D" uid="uid://cbcuw7wsx26tw" path="res://Assets/CATSPRITESHEET_Gray.png" id="2_cu3mk"]
[ext_resource type="PackedScene" uid="uid://nheh2k2bhpjo" path="res://Scenes/ZEHud.tscn" id="3_h00wl"]
[ext_resource type="AudioStream" uid="uid://b3v6myl26lgyv" path="res://Assets/Sound/deep_thump.ogg" id="3_vdxma"]
[ext_resource type="PackedScene" uid="uid://10h8qxtfap0i" path="res://Scenes/ZEPassword.tscn" id="4_hr5vr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_44cu1"]
atlas = ExtResource("2_cu3mk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ro8w"]
atlas = ExtResource("2_cu3mk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o48ee"]
atlas = ExtResource("2_cu3mk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sixq4"]
atlas = ExtResource("2_cu3mk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b0vk"]
atlas = ExtResource("2_cu3mk")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_onqh6"]
atlas = ExtResource("2_cu3mk")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5u5m"]
atlas = ExtResource("2_cu3mk")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lyf2"]
atlas = ExtResource("2_cu3mk")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdfd5"]
atlas = ExtResource("2_cu3mk")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4cbv"]
atlas = ExtResource("2_cu3mk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s8mc"]
atlas = ExtResource("2_cu3mk")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmi73"]
atlas = ExtResource("2_cu3mk")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2ou6"]
atlas = ExtResource("2_cu3mk")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgr7d"]
atlas = ExtResource("2_cu3mk")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfg0m"]
atlas = ExtResource("2_cu3mk")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvvxk"]
atlas = ExtResource("2_cu3mk")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w2ove"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44cu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ro8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o48ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sixq4")
}],
"loop": true,
"name": &"IdleDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b0vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onqh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5u5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lyf2")
}],
"loop": true,
"name": &"IdleLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdfd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4cbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s8mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmi73")
}],
"loop": true,
"name": &"IdleRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2ou6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgr7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfg0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvvxk")
}],
"loop": true,
"name": &"IdleUp",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_72fhx"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmbf3"]
size = Vector2(2, 2)

[node name="Player" type="CharacterBody2D" groups=["ZEPlayer"]]
process_mode = 1
script = ExtResource("1_wtpaa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_w2ove")
animation = &"IdleDown"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_72fhx")

[node name="ZEHud" parent="." instance=ExtResource("3_h00wl")]

[node name="ZEPassword" parent="." instance=ExtResource("4_hr5vr")]
offset_left = -320.0
offset_top = -180.0
offset_right = -320.0
offset_bottom = -180.0
inGameMode = true

[node name="Button1" parent="ZEPassword/ButtonBox" index="0" groups=["buttons"]]
process_mode = 3

[node name="Button2" parent="ZEPassword/ButtonBox" index="1" groups=["buttons"]]
process_mode = 3

[node name="Button3" parent="ZEPassword/ButtonBox" index="2" groups=["buttons"]]
process_mode = 3

[node name="Button4" parent="ZEPassword/ButtonBox" index="3" groups=["buttons"]]
process_mode = 3

[node name="Button5" parent="ZEPassword/ButtonBox" index="4" groups=["buttons"]]
process_mode = 3

[node name="Button6" parent="ZEPassword/ButtonBox" index="5" groups=["buttons"]]
process_mode = 3

[node name="Button7" parent="ZEPassword/ButtonBox" index="6" groups=["buttons"]]
process_mode = 3

[node name="Button8" parent="ZEPassword/ButtonBox" index="7" groups=["buttons"]]
process_mode = 3

[node name="Button9" parent="ZEPassword/ButtonBox" index="8" groups=["buttons"]]
process_mode = 3

[node name="Button0" parent="ZEPassword/ButtonBox" index="9" groups=["buttons"]]
process_mode = 3

[node name="ButtonClear" parent="ZEPassword/ButtonBox" index="10" groups=["buttons"]]
process_mode = 3

[node name="ButtonEnter" parent="ZEPassword/ButtonBox" index="11" groups=["buttons"]]
process_mode = 3

[node name="Camera2D" type="Camera2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)
collide_with_areas = true

[node name="GroundCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundCheck"]
shape = SubResource("RectangleShape2D_dmbf3")
debug_color = Color(0.981801, 0, 0.367869, 0.42)

[node name="StepCue" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vdxma")
volume_db = -18.0
pitch_scale = 6.0

[connection signal="area_entered" from="GroundCheck" to="." method="_on_ground_check_area_entered"]
[connection signal="area_exited" from="GroundCheck" to="." method="_on_ground_check_area_exited"]

[editable path="ZEPassword"]
